# rust-radio-sx128x

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  snapcraft.yaml  wrapper.h
.cargo/: config
.github/workflows/: rust.yml
cross/: build.sh
cross/win/: libusb-1.0.pc
src/: base.rs  bindings.rs  compat.rs  ffi.rs  lib.rs  prelude.rs  wrapper.h
src/bindings/: mod.rs
src/device/: ble.rs  common.rs  flrc.rs  gfsk.rs  lora.rs  mod.rs
src/ffi/: mod.rs
src/sx1280/: mod.rs  sx1280-hal.c  sx1280-hal.h  sx1280.c  sx1280.h
src/tests/: vectors.rs
src/util/: main.rs  operations.rs  options.rs
sx1280-driver/: changelog.md  radio.h  readme.md
sx1280-driver/doc/: doxyFile.conf
tests/: integration.rs
