[package]
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "Driver for the Semtec sx1280 2.4GHz RF IC"
repository = "https://github.com/rust-iot/rust-radio-sx128x"
license = "MPL-2.0"
name = "radio-sx128x"
version = "0.18.0"
edition = "2018"


[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sx128x-util-{ target }.tgz"
bin-dir = "{ bin }-{ target }{ format }"


[features]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

std = [ "radio/std", "driver-pal/mock", "failure/std", "hex", "thiserror" ]
poll-irq = []
patch-unknown-state = []
tests = [ "driver-pal/mock" ]
util = [ "std", "structopt", "tracing", "tracing-subscriber", "humantime", "crc16", "driver-pal", "driver-pal/hal", "radio/helpers" ]

default = [ "std", "util", "serde", "driver-pal/hal-cp2130", "driver-pal/hal-linux", "patch-unknown-state" ]

[dependencies]
radio = { version = "0.11.0", default_features = false }
embedded-hal = "1.0.0-alpha.7"
defmt = {version = "0.3.0", optional = true }

driver-pal = { version = "0.8.0-alpha.6", default_features = false, optional=true }

bitflags = "1.0.4"
libc = "0.2.123"
log = { version = "0.4.17", default_features = false }
strum = { version = "0.24.0", default_features = false, features = [ "derive" ] }

crc16 = { version = "0.4.0", optional = true }
hex = { version = "0.4.2", optional = true }

humantime = { version = "2.0.1", optional = true }
structopt = { version = "0.3.26", optional = true }
thiserror = { version = "1.0.30", optional = true }

[dependencies.failure]
version = "0.1.7"
features = [ "derive" ]
default-features = false

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.144"

[dependencies.tracing]
optional = true
version = "0.1.34"

[dependencies.tracing-subscriber]
optional = true
version = "0.2.16"


[dev-dependencies]
color-backtrace = "0.5.0"
toml = "0.5.8"
serde = { version = "1.0.144", features = [ "derive" ] }
serde_derive = "1.0.0"

[[bin]]
name = "sx128x-util"
path = "src/util/main.rs"
required-features = ["util"]


[patch.crates-io]
#radio = { git = "https://github.com/rust-iot/radio-hal" }
