[package]
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "Driver for the Semtec sx1280 2.4GHz RF IC"
repository = "https://github.com/rust-iot/rust-radio-sx128x"
license = "MPL-2.0"
name = "radio-sx128x"
version = "0.18.0"
edition = "2018"


[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sx128x-util-{ target }.tgz"
bin-dir = "{ bin }-{ target }{ format }"


[features]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

std = [ "radio/std", "driver-pal/mock", "failure/std", "hex", "thiserror" ]
poll-irq = []
patch-unknown-state = []
tests = [ "driver-pal/mock" ]
util = [ "std", "clap", "tracing", "tracing-subscriber", "humantime", "crc16", "driver-pal", "driver-pal/hal", "radio/helpers" ]

default = [ "std", "util", "serde", "driver-pal/hal-cp2130", "driver-pal/hal-linux", "patch-unknown-state" ]

[dependencies]
radio = { version = "0.12.1", default_features = false }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.1.0"
driver-pal = { version = "0.9.0", default_features = false, optional=true }

defmt = {version = "0.3.5", optional = true }
bitflags = "2.4.0"
libc = "0.2.123"
log = { version = "0.4.17", default_features = false }
strum = { version = "0.26.2", default_features = false, features = [ "derive" ] }
crc16 = { version = "0.4.0", optional = true }
hex = { version = "0.4.2", optional = true }
humantime = { version = "2.0.1", optional = true }
clap = { version = "4.4.7", optional = true, features = [ "derive", "env" ] }
thiserror = { version = "1.0.30", optional = true }
failure = { version = "0.1.7", features = [ "derive" ], default-features = false }
serde = { version = "1.0.144", optional = true , features = ["derive"]}

tracing = { version = "0.1.34", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = [ "env-filter" ] }


[dev-dependencies]
color-backtrace = "0.6.1"
toml = "0.8.12"
serde = { version = "1.0.144", features = [ "derive" ] }
serde_derive = "1.0.0"

[[bin]]
name = "sx128x-util"
path = "src/util/main.rs"
required-features = ["util"]
